# MF-MDP

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt  run_simulation.sh
LCT/policy/: policy_actor.py
LCT/policy/training/: policy_mf_trainer.py  train_policy.py
LCT/state_transition/: event_transformer_net.py
LCT/state_transition/training/: README.md  train_event_transformer.py
MF_MDP/policy/datasets/: policy_mf_dataset.py
MF_MDP/policy/training/: README.md  train_policy.py
MF_MDP/state_transition/training/: train_event_transformer.py
config/: __init__.py  config.yaml  settings.py
datasets/: event_state_datasets.py
main/mean_field_utils_state/: __init__.py  loss_state.py  update_prompt_state.py
main/script/: generate_state_trajectory.py  run_mf_batch_newstate_policy.py  run_mf_mdp.py  run_simulation.sh
